--- a/mobile.css
+++ b/mobile.css
@@ -1,10 +1,10 @@
-@media (max-width: 1040px) {
+@media (max-width: 740px) {
     .navbar-text{
         display: none;
     }
 
-    .menu-icon{
-        /* display: flex !important; */
+    .header{
+        padding-left: 5px;
     }
 
     .icon-menu{
@@ -13,6 +13,7 @@
 
     .navbar{
         display: flex;
+        flex: 1;
     }
 
     .navbar-text{
@@ -73,5 +74,10 @@
         align-items: center;
         justify-content: center;
         font-size: 13px;
+    }
+
+    .icon-size {
+        font-size: 25px !important;
+        font-weight: 250 !important;
     }
 }
